[project]
name = "harris-flood-susceptibility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "rasterstats>=0.20.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
